[tool.poetry]
name = "media-sort"
version = "0.1.0"
description = "Sort media files using AI"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
transformers = "^4.46.2"
pillow = "^11.0.0"
pyvips = "^2.2.3"
ipython = "*"
jupyterlab = "^4.3.0"
torch = "^2.5.1"
timm = "^1.0.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
